--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@
 export(add_center_label)
 export(add_ring_labels)
 export(add_segment_labels)
+export(add_sunburst_labels)
+export(calculate_label_params)
 export(create_example_ae_data)
 export(create_example_categorical_ts)
 export(create_example_response_trajectory)
@@ -11,6 +13,7 @@ export(create_example_trajectory_data)
 export(ctcae_colors)
 export(ctcae_labels)
 export(geom_sunburst)
+export(label_orientations)
 export(plot_sunburst)
 export(prepare_ae_data)
 export(prepare_ae_trajectory)
